[package]
name = "pallet-metarium"
authors = ["MetariumProject <https://github.com/MetariumProject>"]
description = "FRAME pallet metarium for defining custom runtime logic for the Metarium parachain."
version = "0.0.2"
license = "Proprietary"
homepage = "https://substrate.io"
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { version = "0.4.20", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

# Substrate
frame-benchmarking = { path = "../../../../substrate/frame/benchmarking", default-features = false, optional = true }
frame-support = { path = "../../../../substrate/frame/support", default-features = false }
frame-system = { path = "../../../../substrate/frame/system", default-features = false }

[dev-dependencies]
# Substrate
sp-core = { path = "../../../../substrate/primitives/core", default-features = false }
sp-io = { path = "../../../../substrate/primitives/io", default-features = false }
sp-runtime = { path = "../../../../substrate/primitives/runtime", default-features = false }
# Pallets composed only in the multisig→sudo→scribe integration test (Slice 4).
# std is forced on: these are test-only deps (always built in a std context), and
# pallet-multisig pulls the polkadot-sdk-frame umbrella, which needs std here.
pallet-balances = { path = "../../../../substrate/frame/balances", default-features = false, features = ["std"] }
pallet-sudo = { path = "../../../../substrate/frame/sudo", default-features = false, features = ["std"] }
pallet-multisig = { path = "../../../../substrate/frame/multisig", default-features = false, features = ["std"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
